# Nova-search-backend-

./: .env  config.py  main.py  pyproject.toml
app/: main.py
app/api/: routes.py  websockets.py
app/core/: config.py
app/models/: schemas.py
app/services/: chat.py  crawler.py  formatters.py  indexer.py  llm.py  smart_search.py
index/: MAIN_7u09v38ixwvosz0h.seg  MAIN_f5f2hr76xxg5v2to.seg  MAIN_fc6kxgjzc46bblpd.seg  MAIN_pj7sr6esfqq0nbo0.seg  MAIN_q0neenvogmgmmopw.seg  _MAIN_11.toc  _MAIN_9.toc
src/: chat.py  crawler.py  indexer.py  json.json  llm.py
