[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "playwright>=1.49.1",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "tldextract>=5.3.1",
    "asyncpg>=0.29.0",
]
